# card-game

./: .env  Cargo.toml  diesel.toml  lib.rs  notes.md  poo_head_rules.yaml
migrations/2021-02-09-030204_users/: up.sql
migrations/2021-02-09-213706_create_players/: up.sql
migrations/2021-02-09-213710_create_games/: up.sql
migrations/2021-02-09-213720_create_games_players/: down.sql  up.sql
migrations/2021-02-09-213720_create_games_users/: up.sql
migrations/2021-02-17-083249_create_cards/: down.sql  up.sql
migrations/2021-02-17-195701_create_card_groups/: down.sql  up.sql
src/: card_and_deck.rs  card_deck.rs  db.rs  errors.rs  game_rules.rs  game_state.rs  graphql.rs  graphql_schema.rs  main.rs  models.rs  player.rs  route_handlers.rs  schema.rs  user_input.rs
src/deck/: graphql.rs  mod.rs  models.rs  records.rs
src/game/: graphql.rs  mod.rs  model.rs  record.rs
src/user/: handler.rs  mod.rs  model.rs  util.rs
src/user/service/: list.rs  login.rs  mod.rs  register.rs
src/user/static/: login.html  register.html
