[package]
name = "card-table"
version = "0.1.0"
authors = ["mnussbaum <michaelnussbaum08@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.8.2"
futures = "0.3.12"
actix-cors = "0.5.4"
actix-rt = "1.1.1"
actix-web = "3.3.2"
diesel= {version = "1.4", features = ["postgres", "r2d2", "chrono"]}
dotenv = "0.15"
juniper = "0.15.3"
rand = "0.7"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
text_io = "0.1"
uuid = {version = "0.8.2", features = ["v4"]}
