[package]
name = "card-table"
version = "0.1.0"
authors = ["mnussbaum <michaelnussbaum08@gmail.com>"]
edition = "2018"

[dependencies]
actix-cors = "0.5"
actix-identity = "0.3"
actix-rt = "1.1"
actix-web = "3.3"
argon2rs = "0.2"
chrono = { version = "0.4", features = ["serde"] }
diesel = {version = "1.4", features = ["chrono", "postgres", "r2d2", "uuidv07"]}
diesel-derive-enum = {version = "1", features = ["postgres"]}
dotenv = "0.15"
env_logger = "0.8"
futures = "0.3"
itertools = "0.10"
juniper = "0.15"
log = "0.4"
r2d2 = "0.8"
rand = "0.7"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.8"
thiserror = "1.0"
time = "0.2"
uuid = {version = "0.8", features = ["serde", "v4"]}
